--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project(aws_robomaker_racetrack_world)
 # Find ament packages and libraries for ament and system dependencies
 ################################################################################
 find_package(ament_cmake REQUIRED)
-find_package(gazebo_ros REQUIRED)
+find_package(ros_gz_sim REQUIRED)
 
 
 ################################################################################
@@ -20,7 +20,7 @@ install(DIRECTORY launch models worlds
 )
 
 ament_export_dependencies(ament_cmake)
-ament_export_dependencies(gazebo_ros)
+ament_export_dependencies(ros_gz_sim)
 
 ################################################################################
 # Macro for ament package
